# yavoc

./: .pre-commit-config.yaml  .pydocstyle  .pylintrc  LICENSE  mypy.ini  pyproject.toml
src/yavoc/: __init__.py  base.py  count.py  vocabulary.py
