[tool.poetry]
name = "yavoc"
version = "0.1.0"
description = "Yet Another Vocabulary management tool. Simple, No dependency, Embeddable."
authors = ["Hiroyuki Tanaka <aflc0x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]